craft probe
